--- a/disk-service/package.json
+++ b/disk-service/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@swc/core": "^1.2.220",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/locale": "^0.1.1",
     "@types/node": "^18.6.3",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "clean-webpack-plugin": "^4.0.0",
@@ -43,7 +44,9 @@
     "aurora-orm": "^0.0.79",
     "fastify": "^4.3.0",
     "fastify-multer": "^2.0.3",
+    "file-type": "16.5.3",
     "jsonwebtoken": "^8.5.1",
+    "locale": "^0.1.0",
     "zoply-schema": "^1.0.2"
   }
 }
